0.13.3.AD (PRE_RELEASE):
-----------------------
- Fixes Misc Alt Build Function Duplication Issues
  * Addresses issues reported using the build process at https://github.com/xaionaro/edk2-builder-docker
    - Updates `LodePNG` to Version 20221108
    - Deduplicates `DebugLog` function and aligns calling convention
- Fixes Memory Conflict in 'Invalid EFI Versions' Debug Logging
  * The DBG build had an invalid memory allocation instance that results in a hang when logging detection
  * Improved overall handling by reducing the items disabled on detection
- Fixes `Forced Default` Config Settings
  * Forced Defaults, typically based on firmware type, could be skipped under some circumstances
  * This gap has now been closed
- Improves `DefaultSelection` Feature
  * A substring match is now only attempted if an exact match fails
- Amends `ScanAllESP` Feature
  * Now aligned with upstream implementation and scans all ESPs by default
  * Hence, the "Opt-Out" `decline_esp_filter` token has been replaced by an "Opt-In `enable_esp_filter` token
  * A previous issue where the token operated the wrong way round has been fixed


0.13.3.AC (06 Dec 2022):
-----------------------
- Adds `NvramProtectEx` Feature
  * Extends the `NvramProtect` feature (if set) to Mac OS and `Unknown` UEFI boots
  * The feature can be enabled using a new `nvram_protect_ex` configuration token
    - Replaces the `FocusNvramFix` feature which has been removed
    - Essentially restores the `EnableMacosFilter` feature previously replaced by `FocusNvramFix`
- Fixes `QueryVariableInfo` Handling
  * Now properly handled on `UEFI-Mac` units
  * The output is not currently presented however as Apple firmare does not return accurate information
- Fixes Misc Static Analysis Flags
  * Some are related to filesystem drivers; for which updated versions are created accordingly
- Improves 'SetVariable' Hook/Event Handling
  * Misc improvements including improved memory management